--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Vue Stuff With Bower and Browserify!</title>
   </head>
   <body>
-    <spa>
+    <div class="spa">
       <app></app>
-    </spa>
+    </div>
     <script src="bower_components/vue/dist/vue.min.js"></script>
     <script src="bower_components/vuex/dist/vuex.min.js"></script>
     <script src="index.bundle.js"></script>
